<resources>
    <string name="app_name">TagMo</string>
    <string name="middleCenterError"> </string>
    <string name="topCenterTextMessage">Place the tag under the phone</string>
    <string name="nfcIconDescription">NFC icon</string>
    <string name="movingBarDescription">Moving bar indicating the scanning process</string>
    <string name="shadow_cave_progress">Shadow Cave progress</string>
    <string name="hearts">Hearts</string>
    <string name="edit_tp_data">Edit TP Data</string>
    <string name="editor_error_outofbounds">amiibo contains an invalid current state.</string>
    <string name="fixed_key_found">Locked key OK.</string>
    <string name="fixed_key_missing">No locked key!</string>
    <string name="unfixed_key_found">Unfixed key OK.</string>
    <string name="unfixed_key_missing">No unfixed key!</string>
    <string name="nfc_unsupported">NFC not supported!</string>
    <string name="nfc_disabled">NFC not enabled!</string>
    <string name="nfc_enabled">NFC enabled!</string>

    <string name="settings_import_keys">import_keys</string>
    <string name="settings_import_info">import_info</string>
    <string name="settings_reset_info">reset_info</string>
    <string name="settings_enable_amiibo_browser">enable_amiibo_browser</string>
    <string name="settings_enable_tag_type_validation">enable_tag_type_validation</string>
    <string name="settings_enable_power_tag_support">enable_power_tag_support</string>
    <string name="settings_export_info">settings_export_info</string>
    <string name="settings_info_amiibos">settings_info_amiibos</string>
    <string name="settings_info_game_series">settings_info_game_series</string>
    <string name="settings_info_characters">settings_info_characters</string>
    <string name="settings_info_amiibo_series">settings_info_amiibo_series</string>
    <string name="settings_info_amiibo_types">settings_info_amiibo_types</string>
    <string name="settings_import_info_amiiboapi">settings_sync_info_amiiboapi</string>
    <string name="keys_missing_warning">Amiibo keys not found</string>
    <string name="nfc_enable_action">Enable</string>
    <string name="open_settings_action">Settings</string>
    <string name="edit_ssb_data">Edit SSB data</string>
    <string name="edit_mii_data">Edit Mii data</string>
    <string name="image_network_settings">\@string/image_network_settings</string>
    <string name="no_amiibos_found">No amiibos found</string>
    <string name="no_amiibos_found_subtitle">Please navigate to a folder with amiibo .bin files in it.</string>
    <string name="toggle_file_browser">Toggle file browser</string>
    <string name="folder_parent">Parent</string>
    <string name="icon_up_arrow">Up arrow</string>
    <string name="icon_folder">Folder</string>
    <string name="amiibo_image">amiibo image</string>
    <string name="settings_text_import_keys">Import keys</string>
    <string name="settings_text_encryption_keys">Encryption keys</string>
    <string name="settings_text_file_browser">File browser</string>
    <string name="settings_text_enable_amiibo_browser_description">The built-in amiibo file browser lists and allows filtering of all of the amiibos in the TagMo folder on the sd card.</string>
    <string name="settings_text_enable_amiibo_browser">Enable amiibo file browser</string>
    <string name="settings_text_image_loading">Image loading</string>
    <string name="settings_text_image_network_settings">Load images</string>
    <string name="settings_text_tag_validation">Tag validation</string>
    <string name="settings_text_enable_tag_type_validation_description">Not all NFC chipsets correctly identify NFC tags. Disabling tag verification will write to tags that may not be amiibo compatible or may fail in unexpected ways.</string>
    <string name="settings_text_enable_tag_type_validation">Enable NTAG215 validation</string>
    <string name="settings_text_powertag">PowerTag</string>
    <string name="title_file_browser">File browser</string>
    <string name="title_hex_viewer">Hex viewer</string>
    <string name="title_view_image">View image</string>
    <string name="title_settings">Settings</string>
    <string name="error_keys_not_loaded">Keys not loaded</string>
    <string name="title_write_tag_auto">Write to tag</string>
    <string name="title_write_tag_raw">Write to tag (Raw)</string>
    <string name="title_restore_tag">Update data on tag</string>
    <string name="title_scan_tag">Scan tag</string>
    <string name="title_error">Error</string>
    <string name="tag_detected">Tag detected..</string>
    <string name="error_not_ntag215">Error getting tag data. Possibly not a NTAG215</string>
    <string name="error_no_data">No data to write</string>
    <string name="done">Done</string>
    <string name="error_invalid_action">State error. Invalid action:</string>
    <string name="error_closing_tag">Error closing tag</string>
    <string name="error_no_nfc">NFC support not detected.</string>
    <string name="error_nfc_disabled">NFC Disabled.</string>
    <string name="enable_nfc">NFC adapter is currently disabled. Enable NFC?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="error_export_failed">"Failed to export amiibo info to "</string>
    <string name="exported_amiibo_info">"Exported amiibo info to "</string>
    <string name="error_amiibo_info_not_loaded">amiibo info not loaded</string>
    <string name="button_close">Close</string>
    <string name="title_game_series">Game series</string>
    <string name="title_characters">Characters</string>
    <string name="title_amiibo_series">amiibo series</string>
    <string name="title_amiibo_types">amiibo types</string>
    <string name="error_failed_to_load_info">Failed to load amiibo info</string>
    <string name="error_failed_to_parse_info">Failed to parse amiibo info</string>
    <string name="error_failed_to_read_info">Failed to read amiibo info</string>
    <string name="error_failed_to_update_info">Failed to update amiibo info</string>
    <string name="updated_amiibo_info">Updated amiibo info</string>
    <string name="error_failed_to_parse_default_info">Failed to parse default amiibo info</string>
    <string name="reset_amiibo_info">Reset amiibo info</string>
    <string name="syncing_info_amiiboapi">Syncing amiibo info from AmiiboAPI...</string>
    <string name="syncing_info_success">Syncing amiibo info from AmiiboAPI successful!</string>
    <string name="syncing_info_failure">Syncing amiibo info from AmiiboAPI failed</string>
    <string name="stats_total">"Total: "</string>
    <string name="toggle_info_menu">Toggle info menu</string>
    <string name="title_save_image">Save image</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="saved_file_as">"Saved file as "</string>
    <string name="icon_save">Save</string>
    <string name="menu_simple">Simple</string>
    <string name="menu_compact">Compact</string>
    <string name="menu_large">Large</string>
    <string name="menu_change_view">Change view</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_dump_logcat">Dump logcat (for bug reporting)</string>
    <string name="menu_write_tag_raw">Write tag (Raw mode)</string>
    <string name="menu_id">ID</string>
    <string name="menu_name">Name</string>
    <string name="menu_game_series">Game series</string>
    <string name="menu_character">Character</string>
    <string name="menu_amiibo_series">amiibo series</string>
    <string name="menu_amiibo_type">amiibo type</string>
    <string name="menu_file_path">File path</string>
    <string name="menu_find_files_recursively">Find files recursively</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_sort">Sort</string>
    <string name="settings_text_enable_power_tag_support">Enable PowerTag support</string>
    <string name="settings_text_enable_power_tag_support_description">Support is currently under development. See the wiki on github for limitations and use.</string>
    <string name="setting_text_sync_info_amiiboapi_description">Syncs amiibo info with amiiboapi.com</string>
    <string name="setting_text_sync_info_amiiboapi">Sync amiibo info with AmiiboAPI</string>
    <string name="settings_text_import_info_description">Import amiibo info from JSON</string>
    <string name="settings_text_import_info">Import amiibo info from JSON</string>
    <string name="settings_text_export_info">Export amiibo info from JSON</string>
    <string name="settings_text_reset_info">Reset amiibo info</string>
    <string name="amiibo_info">amiibo info</string>
    <string name="settings_text_amiibo_info_stats">amiibo info stats</string>
    <string name="settings_text_info_amiibos">amiibos</string>
    <string name="settings_text_info_game_series">Game series</string>
    <string name="settings_text_info_characters">Characters</string>
    <string name="settings_text_amiibo_series">amiibo series</string>
    <string name="settings_text_info_amiibo_types">amiibo types</string>
    <string name="title_editor_ssb">Editor</string>
    <string name="title_editor_tp">Editor</string>
    <string name="button_load_tag">Load tag</string>
    <string name="button_scan_tag">Scan tag</string>
    <string name="button_save_tag">Save tag</string>
    <string name="button_write_tag">Write tag</string>
    <string name="button_view_hex">View hex</string>
    <string name="button_restore_tag">Restore tag</string>
    <string name="button_show_qr_code">Show QR code</string>
    <string name="button_scan_qr_code">Scan QR code</string>
    <string name="button_create_tag">Create tag*</string>
    <string name="button_write_tag_raw">Write tag (Raw)</string>
    <string name="checkbox_auto_save_scanned_tags">Auto save scanned tags</string>
    <string name="checkbox_allow_restore_to_different_tag">Allow restore to different tag</string>
    <string name="button_fix_signatures">Fix signatures</string>
    <string name="no_tag_loaded">No tag loaded</string>
    <string name="error_reading_tag">Error reading tag</string>
    <string name="blank_tag">Blank tag</string>
    <string name="id_tag">"ID: "</string>
    <string name="text_unknown">Unknown</string>
    <string name="message_barcode_scanner_not_installed">Barcode Scanner is required to use QR codes. Would you like to install it from the Play Store?</string>
    <string name="loaded_tag_file">Loaded tag file.</string>
    <string name="load_encrypted_tag">Load encrypted tag file for writing</string>
</resources>
