<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_text_encryption_keys">
        <androidx.preference.Preference
            android:key="@string/settings_import_keys"
            android:title="@string/settings_text_import_keys"
            android:icon="@drawable/ic_outline_vpn_key_24"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_text_file_browser">
        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_enable_amiibo_browser"
            android:summary="@string/settings_text_enable_amiibo_browser_description"
            android:title="@string/settings_text_enable_amiibo_browser"
            android:icon="@drawable/ic_outline_folder_24"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_text_image_loading">
        <androidx.preference.ListPreference
            android:entries="@array/imageNetworkSettings"
            android:entryValues="@array/imageNetworkSettingValues"
            android:key="@string/image_network_settings"
            android:title="@string/settings_text_image_network_settings"
            android:icon="@drawable/ic_outline_image_24"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/settings_text_tag_validation">
        <androidx.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/settings_enable_tag_type_validation"
            android:summary="@string/settings_text_enable_tag_type_validation_description"
            android:title="@string/settings_text_enable_tag_type_validation"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/settings_text_powertag">
        <androidx.preference.CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_enable_power_tag_support"
            android:summary="@string/settings_text_enable_power_tag_support_description"
            android:title="@string/settings_text_enable_power_tag_support"/>
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:title="@string/amiibo_info">
        <androidx.preference.Preference
            android:key="@string/settings_import_info_amiiboapi"
            android:summary="@string/setting_text_sync_info_amiiboapi_description"
            android:title="@string/setting_text_sync_info_amiiboapi"
            android:icon="@drawable/ic_baseline_sync_24"/>
        <androidx.preference.Preference
            android:key="@string/settings_import_info"
            android:title="@string/settings_text_import_info"/>
        <androidx.preference.Preference
            android:key="@string/settings_export_info"
            android:title="@string/settings_text_export_info"/>
        <androidx.preference.Preference
            android:key="@string/settings_reset_info"
            android:title="@string/settings_text_reset_info"/>
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_text_amiibo_info_stats">
        <androidx.preference.Preference
            android:key="@string/settings_info_amiibos"
            android:title="@string/settings_text_info_amiibos"/>
        <androidx.preference.Preference
            android:key="@string/settings_info_game_series"
            android:title="@string/settings_text_info_game_series"/>
        <androidx.preference.Preference
            android:key="@string/settings_info_characters"
            android:title="@string/settings_text_info_characters"/>
        <androidx.preference.Preference
            android:key="@string/settings_info_amiibo_series"
            android:title="@string/settings_text_amiibo_series"/>
        <androidx.preference.Preference
            android:key="@string/settings_info_amiibo_types"
            android:title="@string/settings_text_info_amiibo_types"/>
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>