<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/view"
        android:icon="@drawable/ic_baseline_view_array_24"
        android:title="@string/menu_change_view"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/view_simple"
                    android:title="@string/menu_simple" />
                <item
                    android:id="@+id/view_compact"
                    android:title="@string/menu_compact" />
                <item
                    android:id="@+id/view_large"
                    android:title="@string/menu_large" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mnu_dump_logcat"
        android:title="@string/menu_dump_logcat" />
    <item
        android:id="@+id/mnu_write_raw"
        android:title="@string/menu_write_tag_raw" />
</menu>