<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <FrameLayout
                android:id="@+id/amiiboInfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="12dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <Button
                    android:id="@+id/btnLoadTag"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/button_load_tag" />

                <Button
                    android:id="@+id/btnScanTag"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:enabled="false"
                    android:text="@string/button_scan_tag" />

                <Button
                    android:id="@+id/btnSaveTag"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnLoadTag"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:text="@string/button_save_tag" />

                <Button
                    android:id="@+id/btnWriteTagAuto"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnScanTag"
                    android:layout_alignParentEnd="true"
                    android:enabled="false"
                    android:text="@string/button_write_tag" />

                <Button
                    android:id="@+id/btnViewHex"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSaveTag"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:text="@string/button_view_hex" />

                <Button
                    android:id="@+id/btnRestoreTag"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnWriteTagAuto"
                    android:layout_alignParentEnd="true"
                    android:enabled="false"
                    android:text="@string/button_restore_tag" />

                <Button
                    android:id="@+id/btnShowQRCode"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnViewHex"
                    android:layout_alignParentStart="true"
                    android:enabled="false"
                    android:text="@string/button_show_qr_code" />

                <Button
                    android:id="@+id/btnScanQRCode"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnRestoreTag"
                    android:layout_alignParentEnd="true"
                    android:text="@string/button_scan_qr_code" />

                <Button
                    android:id="@+id/btnCreateTag"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/button_create_tag"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnWriteTagRaw"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnWriteTagAuto"
                    android:layout_alignParentLeft="true"
                    android:enabled="false"
                    android:text="@string/button_write_tag_raw"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnFixSig"
                    android:layout_width="@dimen/main_buttons_width"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbNoIDValidate"
                    android:layout_alignParentLeft="true"
                    android:text="@string/button_fix_signatures"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/cbAutoSaveOnScan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/btnScanQRCode"
                    android:layout_marginTop="8dp"
                    android:text="@string/checkbox_auto_save_scanned_tags" />

                <CheckBox
                    android:id="@+id/cbNoIDValidate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/cbAutoSaveOnScan"
                    android:layout_marginBottom="8dp"
                    android:layout_toRightOf="@+id/btnCreateTag"
                    android:text="@string/checkbox_allow_restore_to_different_tag" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cbNoIDValidate"
                    android:layout_alignParentRight="true">

                    <Button
                        android:id="@+id/btnEditDataMii"
                        android:layout_width="@dimen/main_buttons_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:enabled="false"
                        android:text="@string/edit_mii_data"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnEditDataSSB"
                        android:layout_width="@dimen/main_buttons_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:enabled="false"
                        android:text="@string/edit_ssb_data"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnEditDataTP"
                        android:layout_width="@dimen/main_buttons_width"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:enabled="false"
                        android:text="@string/edit_tp_data"
                        android:visibility="gone" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>